# termion

./: .travis.yml  Cargo.toml
examples/: alternate_screen.rs  alternate_screen_raw.rs  async.rs  click.rs  color.rs  commie.rs  detect_color.rs  is_tty.rs  keys.rs  mouse.rs  rainbow.rs  read.rs  rustc_fun.rs  simple.rs  size.rs  truecolor.rs
src/: async.rs  cursor.rs  event.rs  input.rs  lib.rs  raw.rs  screen.rs
src/sys/redox/: tty.rs
src/sys/unix/: tty.rs
src/sys/windows/: attr.rs  mod.rs  size.rs  tty.rs
